feature: show prices and history class

--- a/JTea_DPS926_Assignment1/JTea_DPS926_Assignment1.csproj
+++ b/JTea_DPS926_Assignment1/JTea_DPS926_Assignment1.csproj
@@ -19,5 +19,8 @@
     <EmbeddedResource Update="ManagerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="PurchasesPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
