--- a/JTea_DPS926_Assignment1/JTea_DPS926_Assignment1.csproj
+++ b/JTea_DPS926_Assignment1/JTea_DPS926_Assignment1.csproj
@@ -19,10 +19,13 @@
     <EmbeddedResource Update="AddNewProductPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="ManagerPage.xaml">
+    <EmbeddedResource Update="HistoryDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="PurchaseDetailPage.xaml">
+    <EmbeddedResource Update="HistoryPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="ManagerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="PurchasesPage.xaml">
